Fixed the text alignment in the dropdown-menu mixin of the utils SASS module

--- a/cocktail/html/resources/styles/_utils.scss
+++ b/cocktail/html/resources/styles/_utils.scss
@@ -77,6 +77,7 @@
             opacity: 0;
             height: 0;
             overflow: hidden;
+            text-align: left;
 
             @if $transition == 'fade-in' {
                 transition: opacity 0.5s ease;
